# grip-api

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  api-spec.md  docker-compose.yaml
.github/workflows/: docker-image.yml
app/: index.html
app/custom/: custom.css  custom.js  datatable.js  event_rendering.js  load_data.js  traceroutes.js  utils.js
app/custom/events/: common.js  event_defcon.js  event_edges.js  event_moas.js  event_rendering.js  event_submoas.js
app/hijacks_web/: common.js  custom.css  custom.js  datatable.js  external_data.js  index.js  load_data.js  traceroutes.js  utils.js
app/hijacks_web/blacklist/: blacklist.js
app/hijacks_web/event_details/: event_defcon.js  event_details.js  event_rendering.js
app/hijacks_web/event_list/: event_list.js
app/hijacks_web/pfx_event_details/: pfx_event_details.js
app/hijacks_web/tags/: tags.js
app/hijacks_web/ui_components/: custom.js
app/js/: test_ajax.js  test_datatable.js
app/vendors/jquery/src/: .jshintrc
app/vendors/renderjson/: renderjson.js
src/: backend.rs  lib.rs  main.rs
src/backend/: api.rs  api_auth.rs  api_external.rs  api_hi3.rs  api_json.rs  api_page.rs  api_redirects.rs  api_stats.rs  auth.rs  data.rs  elastic.rs  errors.rs  event_structs.rs  mailer.rs  mod.rs  renderer.rs  utils.rs
systemd/: grip-api.service
templates/: base.html.tera  blacklist.html.tera  event_detail.html.tera  event_detail_defcon.html.tera  event_detail_edges.html.tera  event_detail_moas.html.tera  event_detail_submoas.html.tera  event_list.html.tera  event_traceroutes.html.tera  index.html.tera  tags.html.tera
templates/hi3/: base.html.tera  event_detail.html.tera  event_list.html.tera  event_traceroutes.html.tera
tests/: elastic_test.rs
